Change of alert on the log in page

--- a/case-view/advice-team-response.html
+++ b/case-view/advice-team-response.html
@@ -133,7 +133,7 @@ title: SEND Hub
               </div>
             </div>
 
-            <!-- <div class="card mb-6 toc-anchor" id="team-allocation">
+            <div class="card mb-6 toc-anchor" id="team-allocation">
               <div class="card-header">
                 <div class="d-flex justify-content-between align-items-center">
                   <span>Allocations to Another Team</span>
@@ -176,7 +176,7 @@ title: SEND Hub
                    </div>
                 </form>
               </div>
-            </div> -->
+            </div>
 
             <div class="card mb-6 toc-anchor" id="team-allocation">
               <div class="card-header">
