--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@ title: SEND Hub
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
 			<h2 class="idx-login-name">SEND Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
-			<h4 class="idx-login-heading my-7">Log in</h4>
 
-			<div class="callout callout-info d-none" role="alert">
+			<div class="callout callout-info" role="alert">
 				<p>This is a prototype.</p>
 			</div>
 
-			<div class="callout callout-warning" role="alert">
+			<div class="callout callout-warning d-none" role="alert">
 				<p>There is planned maintenance on Saturday, 23 November 8:30 - 11:00am. The hub may be unavailable during this time.</p>
 			</div>
 
 			<div class="callout callout-error d-none" role="alert">
 				<p>SMS verificaition codes are currently unavailable. We are working to restore the service.</p>
 			</div>
+
+			<h4 class="idx-login-heading my-5">Log in</h4>
 
 			<div class="form mb-3">
 				<label for="emailInput">Email address</label>
